# WD-SuperApp

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a50c06f0329b_create_t001_users_table.py  f7b031b0aa93_create_t002_applications_table.py
backend/src/: main.py
backend/src/api/: routes.py
backend/src/core/: config.py  database.py  exceptions.py  logging.py  security.py  storage.py
backend/src/modules/applications/: cli.py
backend/src/modules/applications/adapters/db/: models.py  repository.py
backend/src/modules/applications/adapters/http/: routes.py
backend/src/modules/applications/adapters/http/dependencies/: providers.py  types.py
backend/src/modules/applications/application/dtos/: requests.py  responses.py
backend/src/modules/applications/application/use_cases/: delete_application.py  remove_application_image.py  upload_application_image.py
backend/src/modules/applications/domain/: entities.py
backend/src/modules/auth/: cli.py
backend/src/modules/auth/adapters/db/: models.py  repository.py
backend/src/modules/auth/adapters/http/: routes.py
backend/src/modules/auth/adapters/http/dependencies/: providers.py  types.py
backend/src/modules/auth/application/dtos/: responses.py
backend/src/modules/auth/application/use_cases/: login.py
backend/src/modules/auth/domain/: entities.py
frontend/: .dockerignore  .gitignore  .prettierignore  Dockerfile  eslint.config.js  index.html  package-lock.json  (+3 more)
(+81 files in other folders)
