[project]
name = "backend"
version = "0.1.0"
description = "Backend da Central de Aplicações Widelab"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.16.0",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.137.2",
    "python-dotenv>=1.1.0",
    "sqlalchemy[asyncio]>=2.0.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "ruff>=0.15.20",
]
